# edgarmcp

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  railway.json
scripts/: register_claude_desktop.py
src/edgarmcp/: __init__.py  __main__.py  attachment_types.py  auth.py  cache.py  citations.py  company.py  filing_loader.py  html_server.py  sections.py  server.py  storage.py  types.py
src/edgarmcp/financials/: __init__.py  formatter.py  merger.py
src/edgarmcp/tools/: __init__.py  get_filings.py  read_document.py  search_edgar.py  search_filings.py  view_financials.py
tests/: conftest.py  test_attachment_types.py  test_cache.py  test_citations.py  test_formatter.py  test_html_server.py  test_merger.py  test_search_helpers.py  test_sections.py
